# examples_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yml  platform_architecture.md  pyproject.toml  test_a2a_curl.sh  test_integration.py
app/: config.py  essay_writer_server.py  server.py  style_editor_server.py
app/agents/: essay_agent.py  style_editor_agent.py
client/: run_essay_workflow.py
tests/: conftest.py
tests/e2e/: test_a2a_integration.py
tests/integration/: test_server.py
tests/unit/: test_agents.py
