[project]
name = "a2a-essay-ecosystem"
version = "1.0.0"
description = "A2A экосистема агентов для написания и редактирования эссе"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "a2a-sdk[http-server]>=0.1.0",
    "openai>=1.54.0",
    "pydantic>=2.9.0",
    "httpx>=0.26.0",
]
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
